--- a/client/templates/home/home.html
+++ b/client/templates/home/home.html
@@ -1,5 +1,5 @@
 <template name="home">
-    This is the home page
+    This is the UPDATED home page
     <br>
     <input type="button" id="make-room-btn" value="Make room">
 </template>
